--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=YOUR_MONGODB_URL
+MONGODB_URL=mongodb+srv://enkhamirr:FUEp0XI9RXiABnAe@leap-test-amar.ijgzw.mongodb.net/advocate-challenge
