--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "graphql-upload": "^16.0.2",
     "jsdom": "^24.1.2",
     "mongoose": "^6.9.0",
-    "next": "14.0.4",
+    "next": "^15.1.2",
     "next-cloudinary": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
